WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61448
REGRESSION (
r86851
): Plug-ins disappear when scrolled with non-1 page scale
https://bugs.webkit.org/show_bug.cgi?id=61448
Summary
REGRESSION (r86851): Plug-ins disappear when scrolled with non-1 page scale
mitz
Reported
2011-05-25 10:13:37 PDT
REGRESSION (
r86851
): Plug-ins disappear when scrolled with non-1 page scale
Attachments
Correct for page scale after intersecting the window clip with the plug-in frame
(2.15 KB, patch)
2011-05-25 10:19 PDT
,
mitz
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-05-25 10:14:57 PDT
<
rdar://problem/9496795
> Patch forthcoming.
mitz
Comment 2
2011-05-25 10:19:19 PDT
Created
attachment 94804
[details]
Correct for page scale after intersecting the window clip with the plug-in frame
mitz
Comment 3
2011-05-25 10:20:54 PDT
Comment on
attachment 94804
[details]
Correct for page scale after intersecting the window clip with the plug-in frame Anders reviewed this.
mitz
Comment 4
2011-05-25 10:23:47 PDT
Fixed in
r87305
. <
http://trac.webkit.org/changeset/87305
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug