<rdar://problem/9496795> REGRESSION (r86851): Plug-ins disappear when scrolled with non-1 page scale https://bugs.webkit.org/show_bug.cgi?id=61448

Reviewed by Anders Carlsson.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::clipRectInWindowCoordinates): Correct for page scale
after intersecting the two rectangles.



Canonical link: https://commits.webkit.org/76856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87305 268f45cc-cd09-0410-ab3c-d52691b4dbfc